Ajout et mises à jour de tests avec les nouvelles données / fonctionnalités